starter/07-Omnifood-Desktop/css/general.css
/*
+++ 01 Typography

-- Font Size (px)
10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98

-- Font Weights
Default: Regular: 400
Medium: 500
Semi bold: 600
Bold: 700

-- Line Heights
Default: 1
Small: 1.05
Medium 1.2
paragraph default: 1.6
Large: 1.8

-- Letter Spacing
-0.5px
0.75px


+++ 02 Colors
Primary: #e67e22
-- Tints (Lighter) : #fdf2e9, #eb984e, #fae5d3
-- Shades (Darker) : #cf711f, #a15818, #45260a;
-- Accents:
-- Greys:
#757575 (Lightest gray allowed on #fff)
#6f6f6f (Lightest gray allowed on #fdf2e9)
#555
#333

+++ 03 Imanges

+++ 04 Icons

+++ 05 Shadows
box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);

+++ 06 Border Radius
Default: 9px
Medium: 11px

+++ 07 White Space
-- Spacing (px)
2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128

*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    /* font-size: 10px; This will bring issues when users try to increase/decrease the size of font-size of the browser */
    /* 10px / 16px = 0.625 = 62.5% */
    /* Percentage of user's font-size browser settings */
    font-size: 62.5%;

    overflow-x: hidden;

    /* Doesn't work on Safari browser */
    /*scroll-behavior: smooth;*/
}

body {
    line-height: 1;
    font-family: 'Rubik', sans-serif;
    font-weight: 400;
    color: #555;

    /* Only works if there is nothing absolutely positioned in relation to body */
    overflow-x: hidden;
}

.test {
    background-color: red;
    color: #fff;
    padding: 4rem;
    font-size: 2rem;
    /* width: 1000px; */
    /* max-width: 1000px; */
    max-width: 50rem;
    /* 1Rem = 16px = html tag font-size */
}

/************ General Reusable Components **************/

.container {
    /* 1140px = 1200 (max-width) - 64 ( padding 32 + 32) = 1,136px */
    max-width: 120rem;
    padding: 0 3.2rem;
    margin: 0 auto;
}

.grid {
    display: grid;
    row-gap: 9.6rem;
    column-gap: 6.4rem;
}

/*.grid:last-child {*/
/*    margin-bottom: 0;*/
/*}*/

.grid:not(:last-child) {
    margin-bottom: 9.6rem;
}

.grid-center-v {
    align-items: center;
}

.grid-2-cols {
    grid-template-columns: repeat(2, 1fr);
}

.grid-3-cols {
    grid-template-columns: repeat(3, 1fr);
}

.grid-4-cols {
    grid-template-columns: repeat(4, 1fr);
}

/*.grid-5-cols {*/
/*    grid-template-columns: repeat(5, 1fr);*/
/*}*/


.heading-primary,
.heading-secondary,
.heading-tertiary
{
    font-weight: 700;
    /*color: #333;*/
    /*color: #2e1907;*/
    color: #45260a;
    letter-spacing: -0.5px;
}

.heading-primary {
    font-size: 5.2rem;
    line-height: 1.05;
    margin-bottom: 3.2rem;
}

.heading-secondary {
    font-size: 4.4rem;
    line-height: 1.2;
    margin-bottom: 9.6rem;
}

.heading-tertiary {
    font-size: 3rem;
    line-height: 1.2;
    margin-bottom: 3.2rem;
}

.subheading {
    display: block;
    font-size: 1.6rem;
    font-weight: 500;
    color: #a15818;
    text-transform: uppercase;
    margin-bottom: 1.6rem;
    letter-spacing: 0.75px;
}

.btn,
.btn:link,
.btn:visited {
    display: inline-block;
    font-size: 2rem;
    padding: 1.6rem 3.2rem;
    border-radius: 9px;
    text-decoration: none;
    font-weight: 600;

    /* Only necessary for .btn */
    border: none;
    cursor: pointer;
    font-family: inherit;

    /* Put transition on the original "state" */
    transition: background-color 0.3s, box-shadow 0.3s;
}

.btn-full:link,
.btn-full:visited {
    background-color: #e67e22;
    color: #fff;
}

.btn-full:hover,
.btn-full:active {
    background-color: #cf711f;
}

.btn-outline:link,
.btn-outline:visited {
    background-color: #fff;
    color: #555;
}

.btn-outline:hover,
.btn-outline:active {
    background-color: #fdf2e9;
    /*border: 3px solid #fff;*/
    /* Trick to add border inside */
    box-shadow: inset 0 0 0 3px #fff;
}

.btn-form {
    background-color: #45260a;
    color: #fdf2e9;
    align-self: end;
    padding: 1.2rem;
}

.btn-form:hover {
    background-color: #fff;
    color: #555;
}

.link:link,
.link:visited {
    color: #e67e22;
    text-decoration: none;
    border-bottom: 1px solid currentColor;
    padding-bottom: 2px;
    transition: all 0.3s;
}

.link:hover,
.link:active {
    color: #cf711f;
    border-bottom: 1px solid transparent;
}

.list {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 1.6rem;
}

.list-icon {
    width: 3rem;
    height: 3rem;
    color: #e67e22;
}

.list li {
    font-size: 1.8rem;
    display: flex;
    align-items: center;
    gap: 1.6rem;
    line-height: 1.2;
}

*:focus {
    /*outline: none;*/
    /*outline: 4px dotted #e67e22;*/
    /*outline-offset: 8px;*/
    box-shadow: 0 0 0 0.8rem rgba(230, 126, 34, 0.5);
}

/* Helper classes */
.margin-right-sm {
    margin-right: 1.6rem !important;
}

.margin-bottom-md {
    margin-bottom: 4.8rem !important;
}

strong {
    font-weight: 500;
}

.center-text {
    text-align: center;
}

